--- a/es/seccions/tundra.html
+++ b/es/seccions/tundra.html
@@ -1,223 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Tundra</title>
-        <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
-        />
-        <link rel="stylesheet" href="../../styles/navbar.css" />
-        <link rel="stylesheet" href="../../styles/modal.css" />
-        <link rel="stylesheet" href="../../styles/tundra.css" />
-    </head>
-    <body>
-        <!-- navbar -->
-        <header>
-            <section class="parallax_wrapper">
-                <nav class="header__nav">
-                    <ul class="nav__links">
-                        <a href="./playa.html" class="side__links">
-                            <span class="material-symbols-outlined">
-                                arrow_back_ios
-                            </span>
-                            Playa
-                        </a>
-                        <a href="../../index2.html" class="links__biomontrails">
-                            Bi<span class="material-symbols-outlined">
-                                light_mode </span
-                            >Montrails
-                        </a>
-                        <a href="./bosques.html" class="side__links">
-                            Bosque
-                            <span class="material-symbols-outlined">
-                                arrow_forward_ios
-                            </span>
-                        </a>
-                    </ul>
-                </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tundra</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
+    />
+    <link rel="stylesheet" href="../../styles/navbar.css" />
+    <link rel="stylesheet" href="../../styles/modal.css" />
+    <link rel="stylesheet" href="../../styles/tundra.css" />
+  </head>
+  <body>
+    <!-- navbar -->
+    <header>
+      <section class="parallax_wrapper">
+        <nav class="header__nav">
+          <ul class="nav__links">
+            <a href="./playa.html" class="side__links">
+              <span class="material-symbols-outlined"> arrow_back_ios </span>
+              Playa
+            </a>
+            <a href="../../index2.html" class="links__biomontrails">
+              Bi<span class="material-symbols-outlined"> light_mode </span
+              >Montrails
+            </a>
+            <a href="./bosques.html" class="side__links">
+              Bosque
+              <span class="material-symbols-outlined"> arrow_forward_ios </span>
+            </a>
+          </ul>
+        </nav>
 
-                <div class="parallax__text">Tundra</div>
-            </section>
-        </header>
+        <div class="parallax__text">Tundra</div>
+      </section>
+    </header>
 
-        <!-- contenedor de sitios -->
-        <main>
-            <section class="sites">
-                <figure class="sites_img_container">
-                    <div class="sites_card">
-                        <span class="card_text">Explora!</span>
-                        <svg
-                            class="card_culata"
-                            width="200"
-                            height="300"
-                            viewBox="0 0 154 184"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                        >
-                            <path
-                                fill-rule="evenodd"
-                                clip-rule="evenodd"
-                                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                                fill="#A8DADC"
-                            ></path>
-                            <path
-                                fill-rule="evenodd"
-                                clip-rule="evenodd"
-                                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                                fill="#A8DADC"
-                            ></path>
-                        </svg>
-                    </div>
+    <!-- contenedor de sitios -->
+    <main>
+      <section class="sites">
+        <figure class="sites_img_container">
+          <div class="sites_card">
+            <span class="card_text">Explora!</span>
+            <svg
+              class="card_culata"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </div>
 
-                    <div class="culata_img"></div>
-                </figure>
+          <div class="culata_img"></div>
+        </figure>
 
-                <div class="sites_text">
-                    <h2>
-                        Paramo la Culata <br />
-                        Venezuela
-                    </h2>
-                    <p>
-                        Sumérgete en las alturas del Páramo de la Culata en
-                        Venezuela!.
-                    </p>
+        <div class="sites_text">
+          <h2>
+            Paramo la Culata <br />
+            Venezuela
+          </h2>
+          <p>Sumérgete en las alturas del Páramo de la Culata en Venezuela!.</p>
 
-                    <!-- boton para abrir el modal -->
-                    <input
-                        type="checkbox"
-                        class="modal__checkbox"
-                        id="modalToggle"
-                    />
-                    <!-- contenedor del modal  de paramo-->
-                    <section class="modal">
-                        <!-- google maps  -->
+          <!-- boton para abrir el modal -->
+          <input type="checkbox" class="modal__checkbox" id="modalToggle" />
+          <!-- contenedor del modal  de paramo-->
+          <section class="modal">
+            <!-- google maps  -->
 
-                        <article class="modal_content">
-                            <div class="modal__img">
-                                <img
-                                    src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
-                                    alt="parque paramo la culata"
-                                />
-                                <p>
-                                    Explora paisajes de ensueño, lagunas
-                                    cristalinas y una biodiversidad única en uno
-                                    de los destinos más mágicos de la tundra
-                                    andina.
-                                </p>
-                            </div>
-                            <!-- google maps -->
-                            <iframe
-                                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
-                                width="50%"
-                                height="100%"
-                                style="border: 0"
-                                loading="lazy"
-                            >
-                            </iframe>
-                            <label for="modalToggle" class="modal__close"
-                                ><span class="material-symbols-outlined">
-                                    close
-                                </span></label
-                            >
-                        </article>
+            <article class="modal_content">
+              <div class="modal__img">
+                <img
+                  src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                  alt="parque paramo la culata"
+                />
+                <p>
+                  Explora paisajes de ensueño, lagunas cristalinas y una
+                  biodiversidad única en uno de los destinos más mágicos de la
+                  tundra andina.
+                </p>
+              </div>
+              <!-- google maps -->
+              <iframe
+                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                width="50%"
+                height="100%"
+                style="border: 0"
+                loading="lazy"
+              >
+              </iframe>
+              <label for="modalToggle" class="modal__close"
+                ><span class="material-symbols-outlined"> close </span></label
+              >
+            </article>
 
-                        <!-- Boton de cerrar  -->
-                    </section>
-                    <label class="modal__button" for="modalToggle"
-                        >Rutas y Planes</label
-                    >
-                </div>
-            </section>
+            <!-- Boton de cerrar  -->
+          </section>
+          <label class="modal__button" for="modalToggle">Rutas y Planes</label>
+        </div>
+      </section>
 
-            <section class="sites">
-                <div class="sites_text">
-                    <h2>
-                        Páramo de Sumapaz <br />
-                        Colombia
-                    </h2>
-                    <p>
-                        Descubre el pulso del Páramo de Sumapaz en Colombia, el
-                        páramo más grande del mundo. Un refugio de vida
-                        silvestre y senderos que te llevarán a un viaje a través
-                        de las nubes.
-                    </p>
+      <section class="sites">
+        <div class="sites_text">
+          <h2>
+            Páramo de Sumapaz <br />
+            Colombia
+          </h2>
+          <p>
+            Descubre el pulso del Páramo de Sumapaz en Colombia, el páramo más
+            grande del mundo. Un refugio de vida silvestre y senderos que te
+            llevarán a un viaje a través de las nubes.
+          </p>
 
-                    <!-- boton para abrir el modal -->
-                    <input
-                        type="checkbox"
-                        class="modal__checkbox"
-                        id="modalToggle_sumapaz"
-                    />
-                    <!-- contenedor del modal  de paramo-->
-                    <section class="modal sumapaz">
-                        <!-- google maps  -->
+          <!-- boton para abrir el modal -->
+          <input
+            type="checkbox"
+            class="modal__checkbox"
+            id="modalToggle_sumapaz"
+          />
+          <!-- contenedor del modal  de paramo-->
+          <section class="modal sumapaz">
+            <!-- google maps  -->
 
-                        <article class="modal_content">
-                            <div class="modal__img">
-                                <img
-                                    src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
-                                    alt="parque paramo la culata"
-                                />
-                                <p>
-                                    Explora paisajes de ensueño, lagunas
-                                    cristalinas y una biodiversidad única en uno
-                                    de los destinos más mágicos de la tundra
-                                    andina.
-                                </p>
-                            </div>
-                            <!-- google maps -->
-                            <iframe
-                                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
-                                width="50%"
-                                height="100%"
-                                style="border: 0"
-                                loading="lazy"
-                            >
-                            </iframe>
-                            <label for="modalToggle" class="modal__close"
-                                ><span class="material-symbols-outlined">
-                                    close
-                                </span></label
-                            >
-                        </article>
+            <article class="modal_content">
+              <div class="modal__img">
+                <img
+                  src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                  alt="parque paramo la culata"
+                />
+                <p>
+                  Explora paisajes de ensueño, lagunas cristalinas y una
+                  biodiversidad única en uno de los destinos más mágicos de la
+                  tundra andina.
+                </p>
+              </div>
+              <!-- google maps -->
+              <iframe
+                src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                width="50%"
+                height="100%"
+                style="border: 0"
+                loading="lazy"
+              >
+              </iframe>
+              <label for="modalToggle" class="modal__close"
+                ><span class="material-symbols-outlined"> close </span></label
+              >
+            </article>
 
-                        <!-- Boton de cerrar  -->
-                    </section>
-                    <label class="modal__button" for="modalToggle"
-                        >Rutas y Planes</label
-                    >
-                </div>
-                <figure class="sites_img_container">
-                    <div>
-                        <span class="card_text">Diviertete!</span>
-                        <svg
-                            class="card_sumapaz"
-                            width="200"
-                            height="300"
-                            viewBox="0 0 154 184"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                        >
-                            <path
-                                fill-rule="evenodd"
-                                clip-rule="evenodd"
-                                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                                fill="#A8DADC"
-                            ></path>
-                            <path
-                                fill-rule="evenodd"
-                                clip-rule="evenodd"
-                                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                                fill="#A8DADC"
-                            ></path>
-                        </svg>
-                    </div>
+            <!-- Boton de cerrar  -->
+          </section>
+          <label class="modal__button" for="modalToggle">Rutas y Planes</label>
+        </div>
+        <figure class="sites_img_container">
+          <div>
+            <span class="card_text">Diviertete!</span>
+            <svg
+              class="card_sumapaz"
+              width="200"
+              height="300"
+              viewBox="0 0 154 184"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                fill="#A8DADC"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                fill="#A8DADC"
+              ></path>
+            </svg>
+          </div>
 
-                    <div class="sumadepaz_img"></div>
-                </figure>
-            </section>
-        </main>
-    </body>
+          <div class="sumadepaz_img"></div>
+        </figure>
+      </section>
+    </main>
+  </body>
 </html>
