--- a/es/seccions/bosques.html
+++ b/es/seccions/bosques.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BioMontrails | Desierto</title>
+  <title>BioMontrails | Bosque</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
@@ -146,8 +146,7 @@
           Venezuela
         </h2>
         <p>
-          Imagina disfrutar de vistas panorámicas espectaculares de Caracas y el Mar Caribe desde las alturas de este
-          parque, que abarca una diversidad de ecosistemas en un solo día.
+          Imagina disfrutar de vistas panorámicas espectaculares de Caracas.
         </p>
 
         <!-- boton para abrir el modal -->
@@ -190,8 +189,7 @@
           Colombia
         </h2>
         <p>
-          te sumergirás en un bosque nublado lleno de misterio y biodiversidad, donde la palma de cera, el árbol
-          nacional de Colombia, se alza majestuosamente hacia el cielo.
+          te sumergirás en un bosque nublado lleno de misterio y biodiversidad.
         </p>
 
         <!-- boton para abrir el modal -->
