--- a/es/seccions/ciudad.html
+++ b/es/seccions/ciudad.html
@@ -1,113 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CIUDAD</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BioMontrails | Ciudad</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="../../styles/ciudad.css">
+    <link rel="stylesheet" href="../../styles/components/navbar.css" />
+    <link rel="stylesheet" href="../../styles/components/modal.css" />
+    <link rel="stylesheet" href="../../styles/seccions/ciudad.css" />
 </head>
+
 <body>
+    <!-- navbar -->
     <header>
-        <section class="wallaper-name">
-            <h1 class="ciudad-text">CIUDAD</h1>
-        </section>
-    </header>
+        <!-- barra de navegacion -->
+        <nav class="navbar_container">
 
-    <main>
-        <section class="ciudad">
-            <figure class="img-container">
-                <span class="card_text">Descubre</span>
-                <svg
-                    class="card_pict"
-                    width="200"
-                    height="300"
-                    viewBox="0 0 154 184"
-                    fill="none"
-                >
-                    <path
-                        fill-rule="evenodd"
-                        clip-rule="evenodd"
-                        d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                        fill="#00296B"
-                    ></path>
-                    <path
-                        fill-rule="evenodd"
-                        clip-rule="evenodd"
-                        d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                        fill="#005090"
-                    ></path>
-                </svg>
-                <h2>MEDELLIN - COLOMBIA</h2>
-                <div class="ciudad-img"></div>
-            </figure>
+            <div class="mobile__elements">
+
+                <div class="burger__menu">
+
+                    <input id="menu-toggle" type="checkbox" />
+
+                    <label class='menu-button-container' for="menu-toggle">
+                        <span class="material-symbols-outlined">
+                            menu
+                        </span>
+                    </label>
 
 
-            <div class="ciudad_text2">
-                <p>
-                    Medellín es una ciudad colombiana conocida por su clima agradable,
-                     cultura vibrante, paisajes montañosos, gastronomía diversa y
-                      transporte público eficiente. Además, ofrece eventos,
-                      vida nocturna y oportunidades de aventura,
-                      lo que la convierte en un atractivo destino turístico en América Latina.
-                </p>
+                    <ul class="menu">
+                        <label class='menu-button-container' for="menu-toggle">
+                            <span class="material-symbols-outlined">
+                                cancel
+                            </span>
+                        </label>
 
-                <div class="buttons">
-                    <a href=""> RUTAS Y PLANES </a>
+                        <a href="./ciudad.html" style="--a: 0">Ciudad</a>
+                        <a href="./bosques.html" style="--a: 1">Bosque</a>
+                        <a href="./tundra.html" style="--a: 2">Tundra</a>
+                        <a href="./desierto.html" style="--a: 3">Desierto</a>
+                        <a href="./playa.html" style="--a: 4">Playa</a>
+
+                    </ul>
                 </div>
+
+                <div class="logo">
+                    <a href="/">Bi<span class="material-symbols-outlined">light_mode</span>montrails</h1>
+                </div>
+
+
+                <a class="login__button" href="/">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                </a>
+
+
+
             </div>
 
-        </section>
+            <div class="desktop__elements">
 
-            <section class="vzla">
-                <div class="ciudad_text2">
-                    <p>
-                        Puerto La Cruz, en Venezuela, es una ciudad costera que atrae a los visitantes
-                         con su clima cálido, playas hermosas, vida nocturna animada
-                         y la posibilidad de explorar el Parque Nacional Mochima. Su gastronomía
-                         y la amabilidad de los locales también son destacados
-                    </p>
-                    <div class="buttons">
-                        <a href=""> RUTAS Y PLANES </a>
-                    </div>
+                <div class="logo">
+                    <a href="/">Bi<span class="material-symbols-outlined">light_mode</span>montrails</h1> </a>
                 </div>
 
-            
 
-                <figure class="img-container">
-                    <h2>PUERTO LA CRUZ - VENEZUELA</h2>
-                    <span class="card_text">Experimenta!</span>
-                    <svg
-                        class="card_pict"
-                        width="200"
-                        height="300"
-                        viewBox="0 0 154 184"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                    >
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
-                            d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
-                            fill="#A8DADC"
-                        ></path>
-                        <path
-                            fill-rule="evenodd"
-                            clip-rule="evenodd"
+                <div class="dropdown__menu">
+
+                    <div class="dropdown__title">
+                        <span> Biomas <span class="material-symbols-outlined">
+                                expand_more
+                    </div>
+
+
+
+
+                    <ul class="dropdown__links">
+                        <a href="./ciudad.html" class="bioma__link">Ciudad</a>
+                        <a href="./bosques.html" class="bioma__link">Bosque</a>
+                        <a href="./tundra.html" class="bioma__link">Tundra</a>
+                        <a href="./desierto.html" class="bioma__link">Desierto</a>
+                        <a href="./playa.html" class="bioma__link">Playa</a>
+                    </ul>
+                </div>
+
+                <ul class="navbar__links">
+                    <a href="/">Restaurantes</a>
+                    <a href="/">Hoteles</a>
+                </ul>
+
+                <!-- input de buscardor -->
+                <div class="navbar__search">
+                    <input type="text" placeholder="biomas,restaurantes...">
+                    <a class="material-symbols-outlined">
+                        search
+                    </a>
+                </div>
+
+                <!-- boton de login -->
+                <div class="login__container">
+                    <span class="material-symbols-outlined">
+                        account_circle
+                    </span>
+                    <a href="/">Iniciar Sesión</a>
+                </div>
+
+            </div>
+            <!-- logo principal -->
+
+        </nav>
+
+    </header>
+    <!-- contenedor de sitios -->
+    <main>
+        <section class="hero">
+            <div class="parallax__text">Ciudad</div>
+        </section>
+
+        <section class="sites">
+            <figure class="sites_img_container">
+                <div class="sites_card">
+                    <span class="card_text">Explora!</span>
+                    <svg class="card__1" width="200" height="300" viewBox="0 0 154 184" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                            fill="#00296B"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
-                            fill="#A8DADC"
-                        ></path>
+                            fill="#00296B"></path>
                     </svg>
-                    <div class="puerto_img"></div>
-                    <!-- <img
-                        class="tundra_img"
-                        src="../../assets/img/tundra/Páramo_de_Sumapaz.jpg"
-                        alt=""
-                    /> -->
-                </figure>
-            </section>
+                </div>
 
+                <div class="site_img_1"></div>
+            </figure>
+
+            <div class="sites_text">
+                <h2>
+                    Medellín <br />
+                    Colombia
+                </h2>
+                <p>
+                    Medellín es una ciudad colombiana conocida por su clima
+                    agradable, cultura vibrante.
+                </p>
+
+                <!-- boton para abrir el modal -->
+                <input type="checkbox" class="modal__checkbox" id="modalToggle" />
+                <!-- contenedor del modal  de paramo-->
+                <section class="modal">
+                    <!-- google maps  -->
+
+                    <article class="modal_content">
+                        <div class="modal__img">
+                            <img src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                                alt="parque paramo la culata" />
+                            <p>
+                                Situados en el estado Falcón, en el noroeste de Venezuela, los Médanos de Coro son una
+                                joya geológica.
+                                Sus imponentes dunas de
+                                hasta 40 metros de altura te dejarán sin aliento.
+                            </p>
+                        </div>
+                        <!-- google maps -->
+                        <iframe
+                            src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                            width="50%" height="100%" style="border: 0" loading="lazy">
+                        </iframe>
+                        <label for="modalToggle" class="modal__close"><span class="material-symbols-outlined">
+                                close
+                            </span></label>
+                    </article>
+
+                    <!-- Boton de cerrar  -->
+                </section>
+                <label class="modal__button" for="modalToggle">Rutas y Planes</label>
+            </div>
+        </section>
+
+        <section class="sites">
+            <div class="sites_text">
+                <h2>
+                    Puerto La Cruz <br />
+                    Venezuela
+                </h2>
+                <p>
+                    Puerto La Cruz, en Venezuela, es una ciudad costera que
+                    atrae a los visitantes con su clima cálido.
+                </p>
+
+                <!-- boton para abrir el modal -->
+                <input type="checkbox" class="modal__checkbox" id="modalToggle_sumapaz" />
+                <!-- contenedor del modal  de paramo-->
+                <section class="modal sumapaz">
+                    <!-- google maps  -->
+
+                    <article class="modal_content">
+                        <div class="modal__img">
+                            <img src="../../assets/img/tundra/modal paramo/parque_nacional_sierra_de_la_culata.jpg"
+                                alt="parque paramo la culata" />
+                            <p>
+                                Explora paisajes de ensueño, lagunas
+                                cristalinas y una biodiversidad única en uno
+                                de los destinos más mágicos de la tundra
+                                andina.
+                            </p>
+                        </div>
+                        <!-- google maps -->
+                        <iframe
+                            src="https://storage.googleapis.com/maps-solutions-61wxdnt2l3/neighborhood-discovery/ngcz/neighborhood-discovery.html"
+                            width="50%" height="100%" style="border: 0" loading="lazy">
+                        </iframe>
+                        <label for="modalToggle" class="modal__close"><span class="material-symbols-outlined">
+                                close
+                            </span></label>
+                    </article>
+
+                    <!-- Boton de cerrar  -->
+                </section>
+                <label class="modal__button" for="modalToggle">Rutas y Planes</label>
+            </div>
+            <figure class="sites_img_container">
+                <div>
+                    <span class="card_text">Diviertete!</span>
+                    <svg class="card__2" width="200" height="300" viewBox="0 0 154 184" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M154 0H0V184H154V0ZM144 10H10V144H144V10Z"
+                            fill="#00296B"></path>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M82.0049 130.973C79.2403 130.973 76.9992 128.734 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 125.972 76.9992 125.972 76.9992 125.972C76.9992 128.731 74.7629 130.968 72.0024 130.973C74.7625 130.978 76.9986 133.214 76.9992 135.972C76.9998 133.211 79.2407 130.973 82.0049 130.973Z"
+                            fill="#00296B"></path>
+                    </svg>
+                </div>
+
+                <div class="site_img_2"></div>
+            </figure>
+        </section>
     </main>
-
 </body>
+
 </html>
